<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:padding="15dp">

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="55dp"
        android:src="@drawable/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/viewGroupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/previewImageView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnKamera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/camera"
            android:textColor="@color/white"
            app:backgroundTint="@color/red" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGaleri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/gallery"
            android:textColor="@color/white"
            app:backgroundTint="@color/red" />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtInputDeskripsiLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp"
        app:helperText="@string/insert_description"
        app:helperTextEnabled="true"
        app:helperTextTextColor="?android:attr/textColorPrimary"
        app:layout_constraintTop_toBottomOf="@id/viewGroupButton">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtInputDeskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/form_background"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:textColor="?android:attr/textColorPrimary" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/upload_photo"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@id/edtInputDeskripsiLayout"
        app:layout_constraintTop_toBottomOf="@id/edtInputDeskripsiLayout" />

    <include
        android:id="@+id/layoutLoading"
        layout="@layout/loading"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>