<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    android:padding="24dp"
    tools:context=".ui.login_activity.LoginActivity">

    <TextView
        android:id="@+id/tvBanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:fontFamily="@font/sen_extrabold"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubbanner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/sen"
        android:text="@string/please_login_to_continue"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvBanner" />

    <com.lelestacia.dicodingstoryapp.ui.design.EmailEdt
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/form_background"
        android:drawableStart="@drawable/ic_outline_email"
        android:drawablePadding="10dp"
        android:drawableTint="?android:attr/textColorPrimary"
        android:fontFamily="@font/sen"
        android:inputType="textEmailAddress"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubbanner" />

    <com.lelestacia.dicodingstoryapp.ui.design.PasswordEdt
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/form_background"
        android:drawableStart="@drawable/ic_outline_lock"
        android:drawablePadding="10dp"
        android:drawableTint="?android:attr/textColorPrimary"
        android:fontFamily="@font/sen"
        android:inputType="textPassword"
        android:textColor="?android:attr/textColorPrimary"
        android:textColorHint="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/sen_bold"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        android:paddingBottom="15dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:backgroundTint="?attr/tabBackground"
        app:cornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="@+id/edtPassword"
        app:layout_constraintStart_toStartOf="@+id/edtPassword"
        app:layout_constraintTop_toBottomOf="@id/edtPassword" />

    <TextView
        android:id="@+id/tvHasNoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="40dp"
        android:text="@string/have_no_account"
        android:textColor="?android:attr/textColorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/register"
        android:textColor="?android:attr/textColorPrimary"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/tvHasNoAccount"
        app:layout_constraintStart_toEndOf="@+id/tvHasNoAccount"
        app:layout_constraintTop_toTopOf="@+id/tvHasNoAccount" />

    <include
        android:id="@+id/layoutLoading"
        layout="@layout/loading"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>